firebase token add to the netlify

--- a/src/netlify.html
+++ b/src/netlify.html
@@ -1,4 +1,4 @@
 [[redirects]] from = "http://heartfelt-mooncake-4fbcf7.Netlify.app/" to =
 "http://toolkit-shop.firebaseapp.com/" status = 200 force = true # COMMENT:
 ensure that we always redirect headers = {X-From = "Netlify"} signed =
-"API_SIGNATURE_TOKEN"
+"1:138348539122:web:70b9851a8d4a3c9cbef46b"
